--- a/StickerSmash/package.json
+++ b/StickerSmash/package.json
@@ -39,7 +39,8 @@
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "expo-image": "~2.0.0"
+    "expo-image": "~2.0.0",
+    "expo-image-picker": "~16.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
